agregue_index_y_estructura

--- a/4_muebles.html
+++ b/4_muebles.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="4_muebles.css">
+    <link rel="stylesheet" href="assets/codigo denormalizacion/normalize.css">
+   <link rel="stylesheet" href="4_muebles-dist.css">
 
    
    <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
@@ -24,16 +25,19 @@
 
 
     <title>ALLTecnology</title>
-   
+    <meta property="og:title" content="ALLTECNOLOGY" />
+    <meta property="og:type" content="ecommerce" />
+    <!-- <meta property="og:url" content= ""/> -->
+    <meta property="og:image" content="assets/imagenes/logo/header.jpeg"/>
 
 </head>
 <body>
     <header>
-        <a href="1_Inicio.html" class="logo">
+        <a href="index.html" class="logo">
             <img src="assets/imagenes/logo/LOGO.webp" alt="logo" class="logo-img">
         </a>
         <nav>
-            <a href="1_Inicio.html" class="menu">Menu</a>
+            <a href="index.html" class="menu">Menu</a>
             
             <a href="2_pc.html" class="menu">PC</a>
 
@@ -104,5 +108,7 @@
         <b><i>CREADORES:</i></b>
         <br>
         <i>Dario Basualdo,Braian Basualdo ,Cristian Silva,Fernana Cavarra,Pasquini Castro.</i>
+        <br>
+        <i>Esta página  web no es real, fue creada para fines educativos.</i>
     </footer>
     </body>
