--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="assets/favicon/manifest.json">
 
-    <link rel="stylesheet" href="1_inicio.css">
+    <link rel="stylesheet" href="assets/codigo denormalizacion/normalize.css">
+    <link rel="stylesheet" href="1_inicio-dist.css">
     <title>ALLTecnology</title>
-   
+    <meta property="og:title" content="ALLTECNOLOGY" />
+    <meta property="og:type" content="ecommerce" />
+    <!-- <meta property="og:url" content= ""/> -->
+    <meta property="og:image" content="assets/imagenes/logo/header.jpeg"/>
    
     
 </head>
@@ -143,6 +147,8 @@
         <b><i>CREADORES:</i></b>
         <br>
         <i>Dario Basualdo,Braian Basualdo ,Cristian Silva,Fernana Cavarra,Pasquini Castro.</i>
+        <br>
+        <i class="rojo">Esta página  web no es real, fue creada para fines educativos.</i>
     </footer>
 </body>
 </html>
